feat: ajustes nas rotas e documentaçoes
